--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,7 +31,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jfoenix.jar=C:\\Users\\Com\\Desktop\\jfoenix.jar
+file.reference.jfoenix.jar-1=lib\\jfoenix.jar
 file.reference.sqlitejdbc-v056.jar=C:\\Users\\soicem's com\\Desktop\\sqlitejdbc-v056.jar
+file.reference.sqlitejdbc-v056.jar-1=lib\\sqlitejdbc-v056.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +41,9 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix.jar}:\
-    ${file.reference.sqlitejdbc-v056.jar}
+    ${file.reference.sqlitejdbc-v056.jar}:\
+    ${file.reference.jfoenix.jar-1}:\
+    ${file.reference.sqlitejdbc-v056.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
